--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <meta property="og:url" content="https://group7.io">
         <meta property="og:type" content="website">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="images/icons/icon16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="images/icons/icon32.png" sizes="32x32">
