Added Mailchimp Integration

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 src: url('Horizon Type - AcherusGrotesque-Regular.otf');}
 
         </style>
+
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/aa015c30318469fa28a1e53d9/c1e1f6db78b11646c0a2b461a.js");</script>
     </head>
     <body>
         <div id="pageBg">
