Update meta description and title

--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 <html style="height: 100%;">
     <head>
         <meta charset="utf-8">
-        <title>Group7</title>
+        <title>Group7 - Game Development Group - Sydney, Australia</title>
 
         <meta name=”twitter:card” content="summary" /> 
         <meta name=”twitter:site” content="@Group7Games" /> 
-        <meta name=”twitter:title” content="Group7" /> 
-        <meta name=”twitter:description” content="Games development group based out of Sydney, Australia."/> 
+        <meta name=”twitter:title” content="Group7 - Game Development Group - Sydney, Australia" /> 
+        <meta name=”twitter:description” content="Game development group based in Sydney, Australia. Introducing Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighter. Play now."/> 
         <meta name=”twitter:image” content="https://group7.io/images/previewimage.png" />
 
-        <meta property="og:title" content="Group7">
-        <meta property="og:image" content="https://group7.io/images/previewimage.png">
-        <meta property="og:description" content="Games development group based out of Sydney, Australia.">
-        <meta property="og:url" content="https://group7.io">
-        <meta property="og:type" content="website">
+        <meta property="og:title" content="Group7 - Game Development Group - Sydney, Australia">
+        <meta property="og:image" content="https://group7.io/images/previewimage.png"/>
+        <meta property="og:description" content="Game development group based in Sydney, Australia. Introducing Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighter. Play now."/>
+        <meta property="og:url" content="https://group7.io"/>
+        <meta property="og:type" content="website"/>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <meta property="description" content="Game development group based in Sydney, Australia. Introducing Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighter. Play now."/>
 
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
-        <link rel="icon" type="image/png" href="images/icons/icon16.png" sizes="16x16">
-        <link rel="icon" type="image/png" href="images/icons/icon32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="images/icons/icon96.png" sizes="96x96">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/icons/icon72.png" >
-        <link rel="apple-touch-icon" sizes="114x114" href="images/icons/icon114.png" >
-        <link rel="apple-touch-icon" sizes="152x152" href="images/icons/icon152.png" >
+        <link rel="icon" type="image/png" href="images/icons/icon16.png" sizes="16x16"/>
+        <link rel="icon" type="image/png" href="images/icons/icon32.png" sizes="32x32"/>
+        <link rel="icon" type="image/png" href="images/icons/icon96.png" sizes="96x96"/>
+        <link rel="apple-touch-icon" sizes="72x72" href="images/icons/icon72.png"/>
+        <link rel="apple-touch-icon" sizes="114x114" href="images/icons/icon114.png"/>
+        <link rel="apple-touch-icon" sizes="152x152" href="images/icons/icon152.png"/>
         <script src="js/jquery.js"></script>
         
         <style type="text/css">
