--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                 <div class="center_inner">
                     <p id="logo" data-tilt>Group7</p>
                 </div>
-                <a href="https://saxops1.itch.io/colosseum"><div class="project">Colosseum</div></a>
-                <a href="https://saxops1.itch.io/thaum"><div class="project">Thaum</div></a>
+                <h2 id="header">Play our games free</h2>
+                <a href="https://saxops1.itch.io/colosseum"><div class="project">Colosseum<br/><span style="font-size: 0.75rem;">Multiplayer arcade fighter</span></div></a>
+                <a href="https://saxops1.itch.io/thaum"><div class="project">Thaum<br/><span style="font-size: 0.75rem;">Roguelike dungeon crawler</span></div></a>
             <div id="socials">
                 <a href="https://facebook.com/Group7Games">
                     <svg xmlns="http://www.w3.org/2000/svg"viewBox="0 0 24 24" class="social"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"/></svg>
