--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="center_inner">
                     <p id="logo" data-tilt>Group7</p>
                 </div>
-                <h2 id="header">Play our games free</h2>
+                <h3 id="header">Play our free games below</h3>
                 <a href="https://saxops1.itch.io/colosseum"><div class="project">Colosseum<br/><span style="font-size: 0.75rem;">Multiplayer arcade fighter</span></div></a>
                 <a href="https://saxops1.itch.io/thaum"><div class="project">Thaum<br/><span style="font-size: 0.75rem;">Roguelike dungeon crawler</span></div></a>
             <div id="socials">
