--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         <meta name=”twitter:card” content="summary" /> 
         <meta name=”twitter:site” content="@Group7Games" /> 
         <meta name=”twitter:title” content="Group7 - Game Development Group - Sydney, Australia" /> 
-        <meta name=”twitter:description” content="Australian game development group in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/> 
+        <meta name=”twitter:description” content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/> 
         <meta name=”twitter:image” content="https://group7.io/images/previewimage.png" />
 
         <meta property="og:title" content="Group7 - Game Development Group - Sydney, Australia">
         <meta property="og:image" content="https://group7.io/images/previewimage.png"/>
-        <meta property="og:description" content="Australian game development group in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
+        <meta property="og:description" content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
         <meta property="og:url" content="https://group7.io"/>
         <meta property="og:type" content="website"/>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <meta property="description" content="Australian game development group in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
+        <meta property="description" content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
 
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="images/icons/icon16.png" sizes="16x16"/>
