--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p id="logo" data-tilt>Group7</p>
                 </div>
                 <h3 id="header">Play our free games below</h3>
-                <a href="https://saxops1.itch.io/colosseum"><div class="project">Colosseum<br/><span style="font-size: 0.75rem;">Multiplayer arcade fighter</span></div></a>
+                <a href="https://saxops1.itch.io/colosseum"><div class="project">Colosseum<br/><span style="font-size: 0.75rem;">Arcade multiplayer fighter</span></div></a>
                 <a href="https://saxops1.itch.io/thaum"><div class="project">Thaum<br/><span style="font-size: 0.75rem;">Roguelike dungeon crawler</span></div></a>
             <div id="socials">
                 <a href="https://facebook.com/Group7Games">
