--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html style="height: 100%;">
     <head>
         <meta charset="utf-8">
-        <title>Group7 - Game Development Group - Sydney, Australia</title>
+        <title>Group7 - Indie Game Developers - Sydney, Australia</title>
 
         <meta name=”twitter:card” content="summary" /> 
         <meta name=”twitter:site” content="@Group7Games" /> 
-        <meta name=”twitter:title” content="Group7 - Game Development Group - Sydney, Australia" /> 
+        <meta name=”twitter:title” content="Group7 - Indie Game Developers - Sydney, Australia" /> 
         <meta name=”twitter:description” content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/> 
         <meta name=”twitter:image” content="https://group7.io/images/previewimage.png" />
 
-        <meta property="og:title" content="Group7 - Game Development Group - Sydney, Australia">
+        <meta property="og:title" content="Group7 - Indie Game Developers - Sydney, Australia">
         <meta property="og:image" content="https://group7.io/images/previewimage.png"/>
         <meta property="og:description" content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
         <meta property="og:url" content="https://group7.io"/>
