Meta description hotfix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <meta property="description" content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
+        <meta name="description" content="Australian game developers based in Sydney. Play Thaum - roguelike dungeon crawler - and Colosseum - arcade multiplayer fighting game. Play now for free."/>
 
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="images/icons/icon16.png" sizes="16x16"/>
